--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -93,8 +93,12 @@
     padding: 1rem;
     border-radius: 1rem;
     width: 270px;
-    height: 13rem;
-    
+    height: 10rem;    
+}
+
+.pokemon:hover {
+    top: -5px;
+    box-shadow: 2px 2px 10px #666;
 }
 
 .pokemon .number {
@@ -156,6 +160,7 @@
 .pokemon .detail img {
     max-width: 100%;
     height: 70px;
+    
 }
 
 .pagination {
