--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -79,12 +79,6 @@
     background-color: #f9aec7;
 }
 
-.pokeboll {
-    background-image: url(../imagens/pngwing.com.png);
-    background-position: right;
-    background-size: 50%;
-    background-repeat: no-repeat;
-}
 
 .pokemon {
     display: flex;
@@ -92,10 +86,13 @@
     margin: .5rem;
     padding: 1rem;
     border-radius: 1rem;
-    width: 270px;
+    width: 200px;
     height: 10rem;    
 }
 
+.pokemon > a {
+    text-decoration: none;
+}
 .pokemon:hover {
     top: -5px;
     box-shadow: 2px 2px 10px #666;
@@ -105,7 +102,7 @@
     color: #000;
     opacity: .3;
     text-align: right;
-    font-size: .625rem;
+    font-size: .925rem;
 }
 
 .pokemon .name {
@@ -159,7 +156,7 @@
 
 .pokemon .detail img {
     max-width: 100%;
-    height: 70px;
+    height: 96px;
     
 }
 
